# pear-build

./: .gitignore  .prettierignore  README.md  bin.js  cmd.js  index.js  package-lock.json  package.json
.github/workflows/: build.yml  test.yml
examples/: bare-build.mjs  pear-build.mjs
template/: _template.json
template/appling/: app.cjs  entitlements.plist  package.json
template/brand/icons/darwin/: icon.icns
test/: all.mjs  index.test.js
test/fixtures/distributables/: CMakeLists.txt
test/fixtures/hello-pear-electron/: package.json
test/fixtures/hello-pear-react-native/: package.json
test/fixtures/runtime/: CMakeLists.txt
test/fixtures/runtime/.pear/: app.mjs
test/fixtures/runtime/.pear/appling/: app.cjs  entitlements.plist  package.json
test/fixtures/runtime/.pear/appling/lib/: install.mjs  preflight.mjs  progress.mjs  utils.mjs  view.html.cjs  view.html.mjs  worker.mjs
test/fixtures/runtime/.pear/lib/: preflight.mjs  progress.mjs  utils.mjs  view.html.mjs  worker.mjs
test/fixtures/runtime/.pear/lib/icons/: macos.icns
